--- a/style.css
+++ b/style.css
@@ -23,3 +23,23 @@ font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
     font-style: italic;
 }
+
+.back_btn{
+    color: black;
+}
+
+.labels_fruits{
+background-color: rgb(255, 255, 130);
+font-family: Verdana, Geneva, Tahoma, sans-serif;
+font-size: 18px;
+width: 50%;
+padding: 10px;
+border-radius: 10px;
+box-shadow: 5px 5px 5px rgb(126, 138, 80);
+}
+
+canvas{
+    border: 5px solid rgb(216, 112, 112);
+    box-shadow: 5px 5px 5px gray;
+    border-radius: 10px;
+}
