--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ font-family: Arial, Helvetica, sans-serif;
     color: black;
 }
 
-.labels_fruits{
+.labels_fruits, .labels_plants{
 background-color: rgb(255, 255, 130);
 font-family: Verdana, Geneva, Tahoma, sans-serif;
 font-size: 18px;
@@ -39,7 +39,37 @@ box-shadow: 5px 5px 5px rgb(126, 138, 80);
 }
 
 canvas{
-    border: 5px solid rgb(216, 112, 112);
+    border: 5px solid rgb(40, 35, 70);
     box-shadow: 5px 5px 5px gray;
     border-radius: 10px;
+}
+
+.labels_toys{
+    background-color: rgb(130, 205, 255);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 18px;
+    width: 50%;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px rgb(80, 86, 138);
+    }
+
+    .labels_office{
+        background-color: rgb(255, 130, 130);
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-size: 18px;
+        width: 50%;
+        padding: 10px;
+        border-radius: 10px;
+        box-shadow: 5px 5px 5px rgb(138, 80, 80);
+        }
+        
+.labels_kitchen{
+    background-color: rgb(130, 255, 130);
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-size: 18px;
+        width: 50%;
+        padding: 10px;
+        border-radius: 10px;
+        box-shadow: 5px 5px 5px rgb(80, 138, 100);
 }
